# AECS

./: .gitignore  CMakeLists.txt  README.md  entitlements.plist  main.cpp
Engine/include/: Templates.hpp  Updatable.hpp  World.hpp
Engine/include/ECS/: EntityManager.hpp
Engine/include/ECS/Archetype/: Archetype.hpp  ArchetypeFactory.hpp  ArchetypeStore.hpp  ArchetypeStoreChangeNotifier.hpp  ComponentRegistry.hpp
Engine/include/ECS/Archetype/Chunks/: Chunk.hpp  ChunkFactory.hpp
Engine/include/ECS/Archetype/ComponentView/: ComponentView.hpp  ComponentViewSubscribed.hpp
Engine/include/ECS/Component/: ComponentTypeID.hpp  ComponentTypeInfo.hpp  SignatureBitset.hpp
Engine/include/ECS/System/: System.hpp  SystemComponentView.hpp
Engine/include/FSM/: StateMachine.hpp
Runner/: main.cpp
Tests/: CMakeLists.txt  Systems.hpp  benchmark_ECS.cpp  test_Archetype.cpp  test_ArchetypeFactory.cpp  test_ArchetypeStore.cpp  test_Chunk.cpp  test_ChunkFactory.cpp
include/: Engine.hpp  Updatable.hpp  World.hpp  WorldUpdater.hpp
include/ECS/: Entity.h  EntityManager.hpp
include/ECS/Archetype/: Archetype.hpp  ArchetypeFactory.hpp  ArchetypeStore.hpp  ArrayPool.hpp  ComponentRegistry.hpp
include/ECS/Archetype/Chunks/: Chunk.hpp  ChunkFactory.hpp
include/ECS/Archetype/ComponentView/: ComponentIterator.hpp  ComponentView.hpp  ComponentViewSubscribed.hpp  IterationMeta.hpp
include/ECS/Component/: ComponentTypeID.hpp  SignatureBitset.hpp
include/ECS/System/: SystemComponentView.hpp
include/FSM/: StateMachine.hpp
src/: Engine.cpp
